# 5-7GroupedProperties

./: README.adoc
GroupedProperties/: CMakeLists.txt
GroupedProperties/main/: CMakeLists.txt
GroupedProperties/main/inc/: defender.hpp  footballteam.hpp  player.hpp  stricker.hpp
GroupedProperties/main/qml/: Main.qml
GroupedProperties/main/src/: defender.cpp  footballteam.cpp  main.cpp  player.cpp  playerdetails.cpp  stricker.cpp
